--- a/eresto-client/app/index.html
+++ b/eresto-client/app/index.html
@@ -38,7 +38,7 @@
     <script src="bower_components/json3/lib/json3.js"></script>
     <![endif]-->
     <!-- endbuild -->
-
+    <script src="scripts/lodash.min.js" ></script>
     <script src="bower_components/requirejs/require.js" data-main="scripts/main.js"></script>
   </body>
 </html>
